--- a/Preprocess.ipynb
+++ b/Preprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     /Users/mohamadalomari/nltk_data...\n",
-      "[nltk_data]   Unzipping corpora/stopwords.zip.\n"
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     },
     {
@@ -20,7 +20,7 @@
        "True"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,15 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "unindent does not match any outer indentation level (<tokenize>, line 4)",
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-6-e495d790f179>, line 1)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m4\u001b[0m\n\u001b[0;31m    return list(filtered_sentence)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-e495d790f179>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    def(words):\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -737,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -746,24 +746,6 @@
      "data": {
       "text/plain": [
        "[['what'],\n",
-       " ['we',\n",
-       "  're',\n",
-       "  'not',\n",
-       "  'gonna',\n",
-       "  'be',\n",
-       "  'brothers',\n",
-       "  'we',\n",
-       "  're',\n",
-       "  'not',\n",
-       "  'gonna',\n",
-       "  'be',\n",
-       "  'stepbrothers',\n",
-       "  'go',\n",
-       "  'to',\n",
-       "  'sleep'],\n",
-       " ['go', 'to', 'sleep'],\n",
-       " ['no'],\n",
-       " ['what'],\n",
        " ['we',\n",
        "  're',\n",
        "  'not',\n",
@@ -983,7 +965,7 @@
        " ['that', 'was', 'almost', 'a', 'minute']]"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -994,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1017,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1028,16 +1010,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['hey', 'guys', 'come', 'on', 'in']"
+       "['are',\n",
+       " 'you',\n",
+       " 'saying',\n",
+       " 'that',\n",
+       " 'my',\n",
+       " 'dad',\n",
+       " 's',\n",
+       " 'not',\n",
+       " 'good',\n",
+       " 'enough',\n",
+       " 'for',\n",
+       " 'your',\n",
+       " 'mom']"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1048,19 +1042,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Great----------------------------------- {'neg': 0.0, 'neu': 0.0, 'pos': 1.0, 'compound': 0.6249}\n"
+      "hate------------------------------------ {'neg': 1.0, 'neu': 0.0, 'pos': 0.0, 'compound': -0.5719}\n"
      ]
     }
    ],
    "source": [
-    "sentiment_analyzer_scores('Great')"
+    "sentiment_analyzer_scores('hate')"
    ]
   },
   {
@@ -1098,7 +1092,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
