--- a/Aspect_Based_Sentiment_Analysis.ipynb
+++ b/Aspect_Based_Sentiment_Analysis.ipynb
@@ -51,175 +51,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1011\n",
-      "2084\n",
-      "6829\n",
-      "7541\n",
-      "8324\n",
-      "9196\n",
-      "11465\n",
-      "12310\n",
-      "13112\n",
-      "13809\n",
-      "14367\n",
-      "15064\n",
-      "15335\n",
-      "16298\n",
-      "16393\n",
-      "16576\n",
-      "16686\n",
-      "17649\n",
-      "17744\n",
-      "17927\n",
-      "18146\n",
-      "18157\n",
-      "19183\n",
-      "19194\n",
-      "22521\n",
-      "23609\n",
-      "24179\n",
-      "24182\n",
-      "24339\n",
-      "24341\n",
-      "24506\n",
-      "24707\n",
-      "24715\n",
-      "25236\n",
-      "25239\n",
-      "25396\n",
-      "25398\n",
-      "25563\n",
-      "25764\n",
-      "25772\n",
-      "26195\n",
-      "27305\n",
-      "31766\n",
-      "32454\n",
-      "34434\n",
-      "35249\n",
-      "36155\n",
-      "36909\n",
-      "40517\n",
-      "41141\n",
-      "42965\n",
-      "43569\n",
-      "46359\n",
-      "46933\n",
-      "50988\n",
-      "51148\n",
-      "51560\n",
-      "51720\n",
-      "52131\n",
-      "52147\n",
-      "52617\n",
-      "52633\n",
-      "54262\n",
-      "54623\n",
-      "57628\n",
-      "58074\n",
-      "59714\n",
-      "59716\n",
-      "59722\n",
-      "59981\n",
-      "59983\n",
-      "59989\n",
-      "60263\n",
-      "60581\n",
-      "62239\n",
-      "62628\n",
-      "64913\n",
-      "64914\n",
-      "65462\n",
-      "66992\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(data)):\n",
-    "    sentence = data.lines[i]\n",
-    "    if 'attack' in sentence:\n",
-    "        print(i)\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 216,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "i = 15131\n",
-    "sentence = data.lines[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 217,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'hulk agree to second date with puny humans'"
-      ]
-     },
-     "execution_count": 217,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sentence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Sheldon'"
-      ]
-     },
-     "execution_count": 218,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.character[i]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 219,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'neg': 0.0, 'neu': 0.737, 'pos': 0.263, 'compound': 0.3612}\n"
-     ]
-    }
-   ],
-   "source": [
-    "sentiment_analyzer_scores(sentence)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 186,
    "metadata": {},
    "outputs": [],
@@ -298,7 +129,12 @@
     }
    ],
    "source": [
-    "reason = []\n",
+    "# Extract possible reasons that might result to the sentiment\n",
+    "# Use the hypothesis that this reason can be found by introduction the rules:\n",
+    "# 1.[...-(compound)-NOUN]\n",
+    "# 2. [...-(amod)- NOUN]\n",
+    "# 3. [...-(poss)- NOUN]\n",
+    "# 4. [...-(advmod)- ADJ]\n",
     "for token in doc:\n",
     "    if token.pos_ is 'NOUN':\n",
     "        for j in token.lefts:\n",
