--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import the set and delete any possible nan row \n",
+    "# Import the set (per episode) and delete any possible nan row \n",
     "train_data=pd.read_csv('train_script3.csv')\n",
     "train_data= train_data.dropna().reset_index()\n",
     "\n",
@@ -154,8 +154,7 @@
    "outputs": [],
    "source": [
     "# Gather all data together \n",
-    "## Note: there was no need to have them seperated in the first place since we concatenate them in the end,\n",
-    "## I just had them like this for the LSTM, so this part does not need to be reported \n",
+    "\n",
     "data = [train_data, test_data]\n",
     "all_data = pd.concat(data).reset_index()\n",
     "all_data = all_data[['lines', 'character']]"
