--- a/Sentiment.ipynb
+++ b/Sentiment.ipynb
@@ -6,6 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Packages needed\n",
+    "\n",
     "import re \n",
     "import string \n",
     "import os\n",
@@ -33,6 +35,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Functions for text cleaning and text collection\n",
+    "\n",
     "def remove_stop_words(text):\n",
     "    filtered_sentence= []\n",
     "    for w in text: \n",
@@ -143,6 +147,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a dictionary to put \n",
+    "\n",
     "main_char = [\"Leonard\",\"Sheldon\",\"Penny\", \"Howard\",\"Raj\",\"Amy\",\"Bernadette\"]\n",
     "lines= {'Leonard': {'01':{'01':[]},'02': {'01':[]},'03': {'01':[]},'04': {'01':[]},'05': {'01':[]},'06': {'01':[]},'07': {'01':[]},'08': {'01':[]},'09': {'01':[]}, '10': {'01':[]}}, \n",
     "        'Sheldon': {'01': {'01':[]},'02': {'01':[]},'03': {'01':[]},'04': {'01':[]},'05': {'01':[]},'06': {'01':[]},'07': {'01':[]},'08': {'01':[]},'09': {'01':[]}, '10': {'01':[]}}, \n",
@@ -394,23 +400,11 @@
     }
    ],
    "source": [
+    "# Run the text collection function for all the seasons\n",
+    "\n",
     "for season in ['01','02','03','04','05','06','07','08','09','10']:\n",
     "    get_episodes_line2(season)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Emotion Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -425,6 +419,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Packages for the sentiment analysis\n",
+    "\n",
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "from nltk.tokenize.treebank import TreebankWordDetokenizer"
    ]
@@ -435,6 +431,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Function to get the sentiment for each season and each character\n",
     "def get_sentiment(season, character):\n",
     "    neg = 0\n",
     "    neu = 0\n",
@@ -479,6 +476,7 @@
     }
    ],
    "source": [
+    "# An example\n",
     "get_sentiment('01', 'Raj')"
    ]
   },
@@ -967,6 +965,7 @@
     }
    ],
    "source": [
+    "# Get the average sentiment\n",
     "for season in ['01', '02', '03', '04', '05', '06', '07', '08', '09', '10']:\n",
     "    for character in lines.keys():\n",
     "        try:\n",
@@ -983,7 +982,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Creat the data set for the character prediction. Train in seasons 1-9 test season 10"
+    "#### Creat the data set for the character prediction, for the biLSTM . Train in seasons 1-9 test season 10"
    ]
   },
   {
@@ -1002,15 +1001,6 @@
    "outputs": [],
    "source": [
     "lines_training =  {'line':[] , 'character': []}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lines_training = pd.DataFrame(data=lines_training)"
    ]
   },
   {
@@ -1041,35 +1031,6 @@
     "    seperator = ' '\n",
     "    lines[character][season][episode] = separator.join(A)\n",
     "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 113,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "collect_lines_per_episode('Leonard', '01', '01')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 102,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 102,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(collect_lines_per_episode('Raj', '03', '01'))"
    ]
   },
   {
@@ -1143,13 +1104,6 @@
     "\n",
     "test_set.to_csv('test_script2.csv')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1453,10 +1407,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 389,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Collect all lines of a character per episode to use \n",
     "def collect_lines_per_episode(character, season, episode): \n",
     "    separator = ' '\n",
     "    lines2[character][season][episode] = [separator.join(lines2[character][season][episode])]\n",
